# 2017-Preseason-Code

./: .travis.yml  CMakeLists.txt  README.md  Robot.java  configure  install-deps.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
RobotCode/: .classpath  .gitignore  .project  RobotCode.ipr  RobotCode.iws  build.gradle
RobotCode/TestBot/: build.gradle
RobotCode/src/main/java/org/team401/robot/: Arm.java  Dart.java  Darty.java  LinearActuator.java  Robot.java  ScaledRange.java  Shooter.java  Shooty.java
RobotCode/src/test/java/org/team401/robot/: RobotTest.java
TestBot/src/main/java/frc/team401/testbot/: RobotModule.java
Vision/: CameraSettings.cpp  CameraSettings.hpp  CannyDetector.cpp  CannyDetector.hpp  CreateShapes.cpp  CreateShapes.hpp  Log.hpp  MathData.hpp  NetworkTables.cpp  NetworkTables.hpp  main.cpp  network.cpp  network.h
Vision/cmake_modules/: FindBoost.txt
Vision/handling/NetworkClient/src/org.team401.vision.networkclient/: NetworkClient.java
Vision/handling/NetworkClient/src/org/team401vision/networkclient/: HeartbeatClient.java  NetworkClient.java
Vision/handling/NetworkClient/src/org/team401vision/networkclient/test/: MainTest.java
Vision/handling/VideoReceiver/src/org/team401vision/videoreceiver/: AddressSelector.form  AddressSelector.java  VideoReceiver.java
Vision/processing/: CameraSettings.cpp  CameraSettings.hpp  CannyDetector.cpp  CannyDetector.hpp  CreateShapes.cpp  CreateShapes.hpp  FrameSender.cpp  Log.cpp  Log.hpp  MathData.hpp  MathFunctions.cpp  MathFunctions.hpp  ThreadManager.cpp  ThreadManager.hpp  Threads.hpp  main.cpp
Vision/processing/camera/: CameraSettings.cpp  CameraSettings.hpp
Vision/processing/config/: ADDING_NEW_CONFIG_ELEMENTS_README.txt  ConfigParser.cpp  ConfigParser.hpp  ConfigSettings.cpp  ConfigSettings.hpp
Vision/processing/dataLogging/: Log.cpp  Log.hpp
Vision/processing/imgProc/: CreateShapes.cpp  CreateShapes.hpp  VisionProcessing.cpp  VisionProcessing.hpp  visionProcessing.cpp
Vision/processing/networking/: DataSender.cpp  FrameSender.cpp  Heartbeat.cpp  Heartbeat.hpp
Vision/processing/src/: MathFunctions.cpp  ThreadManager.cpp
Vision/processing/src/cmake_modules/: FindBoost.txt
Vision/processing/src/config/: ConfigSettings.cpp  ConfigSettings.hpp
Vision/processing/src/imgProc/: CreateShapes.cpp  VisionProcessing.cpp  VisionProcessing.hpp
Vision/processing/src/networking/: Heartbeat.cpp
Vision/tests/: CMakeLists.txt  GTestFunctions.txt
Vision/tests/lib/: installGTest.sh
Vision/tests/processing_tests/: CMakeLists.txt  log_tests.cpp  math_tests.cpp  networking_tests.cpp  processing_tests.cpp
Vision/tests/processing_tests/res/: goal.mov
Vision/util/ConfigEditor/src/org/team401vision/configeditor/: ConfigEditor.java
Vision/util/ConfigEditor/src/org/team401vision/configeditor/config/: ConfigBean.java  ConfigParser.java  ConfigWriter.java
Vision/util/ConfigEditor/src/org/team401vision/configeditor/gui/: FileSelectDialog.form  FileSelectDialog.java  MainDialog.form  MainDialog.java
